⚗ Removed hover effect

--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
         </div>
         <div class="block" id="photos-holder">
             <div id="frames">
-                <img src="img/left-frame.png" class="hvr-bounce-out" />
-                <img src="img/middle-frame.png" class="hvr-bounce-out" />
-                <img src="img/right-frame.png" class="hvr-bounce-out" />
+                <img id="left-overlay" src="img/left-frame.png"/>
+                <img id="middle-overlay" src="img/middle-frame.png" />
+                <img id="right-overlay" src="img/right-frame.png" />
             </div>
             <div id="frame-content">
                 <div id="left-frame"></div>
