⚗ Linked gDoc to site

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="css/hover-min.css" rel="stylesheet" type="text/css" />
     <link href="css/style.css" rel="stylesheet" type="text/css" />
     <script src="js/jquery.min.js"></script>
+    <script src="js/tabletop.js"></script>
 </head>
 
 <body>
@@ -47,10 +48,11 @@
             <img src="img/splitter.png" />
         </div>
         <div class="block" id="content-holder">
-            <div>
+            <div class="left-side">
                 <img src="img/retailer.png" />
                 <img src="img/where.png" id="where"/>
             </div>
+            <div id="featured-product"></div>
             <img src="img/photo.png" id="photo-frame" />
         </div>
         <div class="block" id="accent-holder">
