--- a/index.html
+++ b/index.html
@@ -18,26 +18,32 @@
                 <img src="img/login-btn.png" class="hvr-grow-rotate" />
             </a>
             <a href="#">
-                <img src="img/facebook-btn.png" class="hvr-grow-rotate"  />
+                <img src="img/facebook-btn.png" class="hvr-grow-rotate" />
             </a>
             <a href="#">
-                <img src="img/pintrest-btn.png" class="hvr-grow-rotate"  />
+                <img src="img/pintrest-btn.png" class="hvr-grow-rotate" />
             </a>
             <a href="#">
-                <img src="img/instagram-btn.png" class="hvr-grow-rotate"  />
+                <img src="img/instagram-btn.png" class="hvr-grow-rotate" />
             </a>
             <a href="#">
-                <img src="img/blogger-btn.png" class="hvr-grow-rotate"  />
+                <img src="img/blogger-btn.png" class="hvr-grow-rotate" />
             </a>
             <a href="#">
-                <img src="img/youtube-btn.png" class="hvr-grow-rotate"  />
+                <img src="img/youtube-btn.png" class="hvr-grow-rotate" />
             </a>
         </div>
         <div class="block" id="photos-holder">
             <div id="frames">
-                <img id="left-overlay" src="img/left-frame.png"/>
-                <img id="middle-overlay" src="img/middle-frame.png" />
-                <img id="right-overlay" src="img/right-frame.png" />
+                <a id="story-link">
+                    <img id="left-overlay" src="img/left-frame.png" />
+                </a>
+                <a id="instagram-link" target="_blank">
+                    <img id="middle-overlay" src="img/middle-frame.png" />
+                </a>
+                <a id="facebook-link" href="https://www.facebook.com/peacockparkdesign" target="_blank">
+                    <img id="right-overlay" src="img/right-frame.png" />
+                </a>
             </div>
             <div id="frame-content">
                 <div id="left-frame"></div>
@@ -50,10 +56,12 @@
         <div class="block" id="content-holder">
             <div class="left-side">
                 <img src="img/retailer.png" />
-                <img src="img/where.png" id="where"/>
+                <img src="img/where.png" id="where" />
             </div>
-            <div id="featured-product"></div>
-            <img src="img/photo.png" id="photo-frame" />
+            <a id="featured-link">
+                <div id="featured-product"></div>
+                <img src="img/photo.png" id="photo-frame" />
+            </a>
         </div>
         <div class="block" id="accent-holder">
             <img src="img/footer.png" />
