--- a/index.html
+++ b/index.html
@@ -55,6 +55,18 @@
         </div>
         <div class="block" id="content-holder">
             <div class="left-side">
+                <div id="fb-root"></div>
+                <script>
+                    (function (d, s, id) {
+                        var js, fjs = d.getElementsByTagName(s)[0];
+                        if (d.getElementById(id)) return;
+                        js = d.createElement(s);
+                        js.id = id;
+                        js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.6";
+                        fjs.parentNode.insertBefore(js, fjs);
+                    }(document, 'script', 'facebook-jssdk'));
+                </script>
+                <div class="fb-like" data-href="https://www.facebook.com/peacockparkdesign" data-layout="button_count" data-action="like" data-show-faces="false" data-share="false"></div>
                 <img src="img/retailer.png" />
                 <img src="img/where.png" id="where" />
             </div>
