--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
         </div>
         <div class="block" id="content-holder">
             <div class="left-side">
+                <!-- FB integration -->
                 <div id="fb-root"></div>
                 <script>
                     (function (d, s, id) {
@@ -67,6 +68,7 @@
                     }(document, 'script', 'facebook-jssdk'));
                 </script>
                 <div class="fb-like" data-href="https://www.facebook.com/peacockparkdesign" data-layout="button_count" data-action="like" data-show-faces="false" data-share="false"></div>
+                <!-- UI images -->
                 <img src="img/retailer.png" />
                 <img src="img/where.png" id="where" />
             </div>
