⛏ Added links and video section

--- a/index.html
+++ b/index.html
@@ -11,25 +11,31 @@
 </head>
 
 <body>
+    <div id="our-story">
+        <center>
+            <span id="close-video">X</span>
+            <iframe src="https://player.vimeo.com/video/145045446" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+        </center>
+    </div>
     <div id="container">
         <div class="block" id="banner-holder"></div>
         <div class="block" id="navbar-holder">
-            <a href="#">
+            <a href="http://shop.peacockparkdesign.com">
                 <img src="img/login-btn.png" class="hvr-grow-rotate" />
             </a>
-            <a href="#">
+            <a href="https://www.facebook.com/peacockparkdesign" target="_blank">
                 <img src="img/facebook-btn.png" class="hvr-grow-rotate" />
             </a>
-            <a href="#">
+            <a href="http://www.pinterest.com/peacockpark/" target="_blank">
                 <img src="img/pintrest-btn.png" class="hvr-grow-rotate" />
             </a>
-            <a href="#">
+            <a href="https://www.instagram.com/peacockparkdesign/" target="_blank">
                 <img src="img/instagram-btn.png" class="hvr-grow-rotate" />
             </a>
-            <a href="#">
+            <a href="http://peacockparkdesign.blogspot.com/" target="_blank">
                 <img src="img/blogger-btn.png" class="hvr-grow-rotate" />
             </a>
-            <a href="#">
+            <a href="https://www.youtube.com/c/peacockparkdesign" target="_blank">
                 <img src="img/youtube-btn.png" class="hvr-grow-rotate" />
             </a>
         </div>
@@ -38,7 +44,7 @@
                 <a id="story-link">
                     <img id="left-overlay" src="img/left-frame.png" />
                 </a>
-                <a id="instagram-link" target="_blank">
+                <a id="instagram-link" target="_blank" href="https://www.instagram.com/peacockparkdesign/">
                     <img id="middle-overlay" src="img/middle-frame.png" />
                 </a>
                 <a id="facebook-link" href="https://www.facebook.com/peacockparkdesign" target="_blank">
