🗑 Remade theatre mode

--- a/index.html
+++ b/index.html
@@ -11,12 +11,6 @@
 </head>
 
 <body>
-    <div id="our-story">
-        <center>
-            <span id="close-video">X</span>
-            <iframe src="https://player.vimeo.com/video/145045446" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-        </center>
-    </div>
     <div id="container">
         <div class="block" id="banner-holder"></div>
         <div class="block" id="navbar-holder">
@@ -41,7 +35,7 @@
         </div>
         <div class="block" id="photos-holder">
             <div id="frames">
-                <a id="story-link">
+                <a id="story-link" href="story.html" target="_blank">
                     <img id="left-overlay" src="img/left-frame.png" />
                 </a>
                 <a id="instagram-link" target="_blank" href="https://www.instagram.com/peacockparkdesign/">
