--- a/index.html
+++ b/index.html
@@ -11,6 +11,16 @@
 </head>
 
 <body>
+    <div id="retailer-wrapper">
+        <h1>Become a Retailer</h1>
+        <p>Click Below to Download Our Retailer Application.</p>
+        <p>Please fill out the provided forms and email, fax or mail to us with a copy of your state resale certificate.</p>
+        <p><a href="etc/10-29-14_NEW_PPD_APP.pdf" target="_blank">10-29-14_NEW_PPD_APP.pdf</a></p>
+        <p><b>Email</b> sales@peacockparkdesign.com</p>
+        <p><b>Fax</b> 810-519-5741</p>
+        <p><b>Address</b> 14375 Torrey Rd, Fenton, MI 48430</p>
+        <p><a id="close-retailer">Close Window</a></p>
+    </div>
     <div id="container">
         <div class="block" id="banner-holder"></div>
         <div class="block" id="navbar-holder">
@@ -69,7 +79,7 @@
                 </script>
                 <div class="fb-like" data-href="https://www.facebook.com/peacockparkdesign" data-layout="button_count" data-action="like" data-show-faces="false" data-share="false"></div>
                 <!-- UI images -->
-                <img src="img/retailer.png" />
+                <img id="become-retail" src="img/retailer.png" />
                 <img src="img/where.png" id="where" />
             </div>
             <a id="featured-link">
@@ -81,7 +91,7 @@
             <img src="img/footer.png" />
         </div>
         <div class="block" id="press-holder">
-            <a href="#">
+            <a href="press">
                 <img src="img/press.png" />
             </a>
         </div>
