--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Peacock Park Design</title>
     <link href="css/hover-min.css" rel="stylesheet" type="text/css" />
     <link href="css/style.css" rel="stylesheet" type="text/css" />
+    <link href='https://fonts.googleapis.com/css?family=Zeyada' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Jacques+Francois+Shadow' rel='stylesheet' type='text/css'>
     <script src="js/jquery.min.js"></script>
     <script src="js/tabletop.js"></script>
 </head>
@@ -19,7 +21,7 @@
         <p><b>Email</b> sales@peacockparkdesign.com</p>
         <p><b>Fax</b> 810-519-5741</p>
         <p><b>Address</b> 14375 Torrey Rd, Fenton, MI 48430</p>
-        <p><a id="close-retailer">Close Window</a></p>
+        <p><a id="close-retailer" style="font-size: 1.5em;">CLOSE WINDOW</a></p>
     </div>
     <div id="container">
         <div class="block" id="banner-holder"></div>
@@ -87,14 +89,29 @@
                 <img src="img/photo.png" id="photo-frame" />
             </a>
         </div>
-        <div class="block" id="accent-holder">
-            <img src="img/footer.png" />
+        <div id="accent-holder">
+            <img src="img/footer.png" id="accent" />
         </div>
         <div class="block" id="press-holder">
-            <a href="press">
-                <img src="img/press.png" />
-            </a>
+            <img src="img/press-header.png" id="press-header" />
+            <center>
+                <div id="press-articles">
+                    <!-- loop articles -->
+                    <div class="press-article">
+                        <img class="press-image" src="img/farmer.jpg" />
+                        <h1>Ipsum Justo Vehicula</h1>
+                        <span class="press-date">January 1st, 2016</span>
+                        <p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam id dolor id nibh ultricies vehicula ut id elit. Donec ullamcorper nulla non metus auctor fringilla. Maecenas faucibus mollis interdum.</p>
+                        <p>Sed posuere consectetur est at lobortis. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis ornare vel eu leo. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Praesent commodo cursus magna, vel scelerisque nisl consectetur et.</p>
+                        <p>Nulla vitae elit libero, a pharetra augue. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Sed posuere consectetur est at lobortis. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Maecenas sed diam eget risus varius blandit sit amet non magna. Nullam quis risus eget urna mollis ornare vel eu leo. Maecenas faucibus mollis interdum. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
+                        <p>Donec sed odio dui. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Aenean lacinia bibendum nulla sed consectetur. Donec ullamcorper nulla non metus auctor fringilla.</p>
+                    </div>
+                </div>
+            </center>
         </div>
+        <span id="copyright">Copyright 2016 <a href="http://www.peacockparkdesign.com">Peacock Park Design</a>
+            <br />
+        Website by <a target="_blank" href="http://bit.ly/29kVsj6">Jade Allen Cook</a></span>
     </div>
 </body>
 
