⛏ Completed press and blog sections (linked to gdoc)

--- a/index.html
+++ b/index.html
@@ -17,10 +17,15 @@
     <div id="contact-us">
         <h1>Contact Us!</h1>
         <form id="contact-us-form">
-            <input type="text" name="name" placeholder="Jane Smith" /><br />
-            <input type="text" name="email" placeholder="janesmith@gmail.com" /><br />
-            <input type="text" name="message" placeholder="Keep up the good work!" /><br />
-            <input type="submit" value="Send Mail!" /> <br /><br />
+            <input type="text" name="name" placeholder="Jane Smith" />
+            <br />
+            <input type="text" name="email" placeholder="janesmith@gmail.com" />
+            <br />
+            <input type="text" name="message" placeholder="Keep up the good work!" />
+            <br />
+            <input type="submit" value="Send Mail!" />
+            <br />
+            <br />
             <a id="close-contact" style="font-size: 1.5em; cursor: pointer;">CLOSE WINDOW</a>
         </form>
     </div>
@@ -95,7 +100,9 @@
                 <a href="https://www.youtube.com/c/peacockparkdesign" target="_blank">
                     <img id="youtube" src="img/retailer_02.png" />
                 </a>
-                <img src="img/where.png" id="where" />
+                <a href="press/" target="_blank">
+                    <img src="img/where.png" id="where" />
+                </a>
             </div>
             <a id="featured-link">
                 <div id="featured-product"></div>
@@ -108,36 +115,34 @@
         <div class="block" id="press-holder">
             <img src="img/press-header.png" id="press-header" />
             <center>
-                <div id="press-articles" class="container">
+                <div id="peacock-press-articles" class="container">
                     <!-- loop articles -->
-                    <div class="row">
-                        <div class="column" id="press-article-1">
+                    <div class="column" id="press-article-1">
+                        <center>
+                            <img class="press-image" id="press-image-1" src="" />
+                            <br />
+                            <h1></h1>
+                        </center>
+                        <p></p>
+                    </div>
+                    <div id="double-articles">
+                        <div class="column" id="press-article-2">
                             <center>
                                 <br />
-                                <img class="press-image" id="press-image-1" src="img/farmer.jpg" />
+                                <img class="press-image" id="press-image-2" src="" />
                                 <br />
-                                <h1>Ipsum Justo Vehicula</h1>
-                                <p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam id dolor id nibh ultricies vehicula ut id elit. Donec ullamcorper nulla non metus auctor fringilla. Maecenas faucibus mollis interdum.</p>
-                                <p>Donec sed odio dui. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Aenean lacinia bibendum nulla sed consectetur. Donec ullamcorper nulla non metus auctor fringilla.</p>
                             </center>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="column" id="press-article-2">
-                            <br />
-                            <img class="press-image" id="press-image-2" src="img/farmer.jpg" />
-                            <br />
-                            <h1>Ipsum Justo Vehicula</h1>
-                            <p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam id dolor id nibh ultricies vehicula ut id elit. Donec ullamcorper nulla non metus auctor fringilla. Maecenas faucibus mollis interdum.</p>
-                            <p>Donec sed odio dui. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Aenean lacinia bibendum nulla sed consectetur. Donec ullamcorper nulla non metus auctor fringilla.</p>
+                            <h1></h1>
+                            <p></p>
                         </div>
                         <div class="column" id="press-article-3">
-                            <br />
-                            <img class="press-image" id="press-image-3" src="img/farmer.jpg" />
-                            <br />
-                            <h1>Ipsum Justo Vehicula</h1>
-                            <p>Etiam porta sem malesuada magna mollis euismod. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam id dolor id nibh ultricies vehicula ut id elit. Donec ullamcorper nulla non metus auctor fringilla. Maecenas faucibus mollis interdum.</p>
-                            <p>Donec sed odio dui. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Aenean lacinia bibendum nulla sed consectetur. Donec ullamcorper nulla non metus auctor fringilla.</p>
+                            <center>
+                                <br />
+                                <img class="press-image" id="press-image-3" src="" />
+                                <br />
+                            </center>
+                            <h1></h1>
+                            <p></p>
                         </div>
                     </div>
                 </div>
