--- a/index.html
+++ b/index.html
@@ -98,21 +98,11 @@
         </div>
         <div class="block" id="content-holder">
             <div class="left-side">
-                <!-- FB integration -->
-                <div id="fb-root"></div>
-                <script>
-                    (function (d, s, id) {
-                        var js, fjs = d.getElementsByTagName(s)[0];
-                        if (d.getElementById(id)) return;
-                        js = d.createElement(s);
-                        js.id = id;
-                        js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.6";
-                        fjs.parentNode.insertBefore(js, fjs);
-                    }(document, 'script', 'facebook-jssdk'));
-                </script>
-                <div class="fb-like" data-href="https://www.facebook.com/peacockparkdesign" data-layout="button_count" data-action="like" data-show-faces="false" data-share="false"></div>
                 <!-- UI images -->
-                <img id="become-retail" src="img/retailer_01.png" />
+                <a href="#" target="_blank">
+                    <img id="retail-stockist" src="img/top.png" />
+                </a>
+                <img id="become-retail" src="img/bottom.png" />
                 <a href="https://www.youtube.com/c/peacockparkdesign" target="_blank">
                     <img id="youtube" src="img/retailer_02.png" />
                 </a>
