🔧 Fixed form on contact page

--- a/index.html
+++ b/index.html
@@ -19,22 +19,24 @@
 </head>
 
 <body>
+    <center>
+        <div id="coming-soon">
+            <h1>COMING SOON!</h1>
+            <br />
+            <img src="img/contact-man.png" id="coming-soon-man" />
+        </div>
+    </center>
     <div id="contact-us">
         <img src="img/contact-man.png" id="contact-man" />
-        <div>
-            <h1>Contact Us!</h1>
-            <center>
-                <form id="contact-us-form"></form>
-            </center>
-            <a id="close-contact" style="font-size: 1.5em; cursor: pointer;">CLOSE WINDOW</a>
-            <br />
-            <br />
-            <p>
-                1 (866) 504-4004
-                <br /> 14375 Torrey Road
-                <br /> Fenton, MI 48430
-            </p>
-        </div>
+        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeX8nzpoRTK5sVy6_Ox32MWnj_3Ajilzd9yj-SSIO0UhmfHmg/viewform?embedded=true" width="760" height="100%" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+        <a id="close-contact" style="font-size: 1.00em; cursor: pointer;">Click Here To Return Home!</a>
+        <br />
+        <br />
+        <p>
+            1 (866) 504-4004
+            <br /> 14375 Torrey Road
+            <br /> Fenton, MI 48430
+        </p>
     </div>
     <div id="retailer-wrapper">
         <img src="img/retail-girl.png" id="retail-girl" />
