⛏ Added functionality to coming soon page

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body>
     <center>
-        <div id="coming-soon">
+        <div id="coming-soon" style="display:none;">
             <h1>COMING SOON!</h1>
             <br />
             <img src="img/contact-man.png" id="coming-soon-man" />
@@ -101,7 +101,7 @@
         <div class="block" id="content-holder">
             <div class="left-side">
                 <!-- UI images -->
-                <a href="#" target="_blank">
+                <a id="retailist" target="_blank">
                     <img id="retail-stockist" src="img/top.png" />
                 </a>
                 <img id="become-retail" src="img/bottom.png" />
